[package]
edition = "2021"
name = "ppaass-proxy"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppaass-protocol = "0.1.3"
ppaass-codec = "0.1.5"
ppaass-crypto = "0.1.3"
tokio = { version = "1", features = ["macros", "time", "net", "io-util", "rt-multi-thread", "fs"] }
toml = "0"
thiserror = "1"
serde_derive = "1"
serde = "1"
bytes = "1"
futures-util = "0"
futures = "0"
tokio-stream = "0"
tokio-util = "0"
uuid = { version = "1", features = ["v4"] }
pretty-hex = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["chrono", "json"] }
tracing-appender = "0"
tokio-io-timeout = "1"
mimalloc = "0"
tokio-tfo = "0"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display"] }